syntax = "proto3";

package pb;

service Signal {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc Echo (EchoRequest) returns (EchoResponse) {}
}

option go_package = ".;pb";

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
